# deep-thought

./: .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .vale.ini  42.md  lint.config.yaml  package-lock.json  package.json  pyproject.toml
05-tools/: LOG.md  pyproject.toml
05-tools/spec/: 260401-agent-design.md  260401-repo-overview.md  260402-tooling-evolution.md  multi-repo-tooling.md
docs/: 260323-how-can-i-programmatically-access-my-gmail,-google.md  README.md  api-mcp-skd.md  macbook-pro-specs.md  repo-rebuild.md  requirements-template.md  tool-implementation-standard-outline.md
docs/spec/: 260401-agent-design.md  260402-tooling-evolution.md  README.md
docs/templates/tool-requirements/: requirements-template.md  tool-implementation-standard-outline.md
docs/tools/: README.md
docs/tools/00-requirements/: 260404-gdrive-requirements.md  apng-requirements.md  elevenlabs-requirements.md  image-requirements.md  krea-requirements.md  stackexchange-requirements.md  youtube-requirements.md
docs/tools/audio/: 260322-requirements.md  CHANGELOG.md  ISSUES.md
docs/tools/embeddings/: 260402-qdrant-schema.md  CHANGELOG.md
docs/tools/file-txt/: ISSUES.md
docs/tools/gcal/: 260323-requirements.md  CHANGELOG.md  ISSUES.md
docs/tools/gdrive/: CHANGELOG.md  ISSUES.md
docs/tools/gmail/: 260323-requirements.md  CHANGELOG.md  ISSUES.md
docs/tools/reddit/: 260322-requirements.md  CHANGELOG.md  ENHANCEMENTS.md  ISSUES.md  api-model.md
docs/tools/research/: 260323-requirements.md  CHANGELOG.md  ISSUES.md
docs/tools/stackexchange/: CHANGELOG.md  ISSUES.md
docs/tools/todoist/: 260313-requirements.md  CHANGELOG.md  ISSUES.md  api-model-html.md  api-model.md
docs/tools/web/: CHANGELOG.md  ISSUES.md  README.md
files/: api-mcp-skd.md  repo-rebuild.md
files/future-enhancements/: cross-repo-symlinks.md  keychain-secret-storage.md
files/templates/tool-requirements/: requirements-template.md  tool-implementation-standard-outline.md
files/tools/audio/: CHANGELOG.md  ISSUES.md  requirements.md
files/tools/embeddings/: 260402-qdrant-schema.md  CHANGELOG.md
files/tools/file-txt/: 260321-requirements.md  CHANGELOG.md  ISSUES.md
files/tools/gcal/: 260323-requirements.md  CHANGELOG.md  ISSUES.md
files/tools/gdrive/: CHANGELOG.md
files/tools/gmail/: 260323-requirements.md  CHANGELOG.md  ISSUES.md
files/tools/reddit/: 260322-requirements.md  CHANGELOG.md  ISSUES.md  requirements.md
files/tools/research/: 260323-requirements.md  CHANGELOG.md  ISSUES.md
files/tools/todoist/: 260313-requirements.md  CHANGELOG.md  ISSUES.md
scripts/: gdrive-backup.sh  gemini-audit.py
src/: CLAUDE.md
src/config/: audio-configuration.yaml  file-txt-configuration.yaml  gcal-configuration.yaml  gdrive-configuration.yaml  gmail-configuration.yaml  reddit-configuration.yaml  research-configuration.yaml  todoist-configuration.yaml  todoist_configuration.yaml  web-configuration.yaml
src/deep_thought/: embeddings.py  progress.py  secrets.py  secrets_cli.py  text_utils.py
tests/: test_embeddings.py  test_progress.py  test_secrets.py  test_secrets_cli.py  test_text_utils.py
tests/audio/: conftest.py  test_cli.py  test_config.py  test_db_queries.py  test_db_schema.py  test_diarization.py  test_engines.py  test_filters.py  test_hallucination.py  test_llms.py  test_models.py  test_output.py  test_processor.py
tests/file_txt/: test_cli.py  test_config.py  test_convert.py  test_eml_engine.py  test_filters.py  test_image_extractor.py  test_llms.py  test_msg_engine.py  test_output.py
tests/gcal/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_create.py  test_filters.py  test_llms.py  test_models.py  test_output.py  test_pull.py  test_queries.py  test_schema.py  test_update.py
tests/gdrive/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_queries.py  test_schema.py  test_uploader.py  test_walker.py
tests/gmail/: __init__.py  conftest.py  test_auth.py  test_cleaner.py  test_cli.py  test_client.py  test_config.py  test_embeddings.py  test_extractor.py  test_filters.py  test_llms.py  test_models.py  test_output.py  test_processor.py  test_processor_embeddings.py  test_queries.py  test_schema.py
tests/reddit/: conftest.py  test_cli.py  test_client.py  test_config.py  test_embeddings.py  test_filters.py  test_image_extractor.py  test_llms.py  test_models.py  test_output.py  test_processor.py  test_processor_embeddings.py  test_queries.py  test_schema.py
tests/research/: __init__.py  conftest.py  test_cli.py  test_cli_embeddings.py  test_config.py  test_embeddings.py  test_models.py  test_output.py  test_researcher.py
tests/stackexchange/: conftest.py  test_cli.py  test_client.py  test_config.py  test_embeddings.py  test_filters.py  test_llms.py  test_models.py  test_output.py  test_processor.py  test_queries.py  test_schema.py
tests/todoist/: conftest.py  test_attach.py  test_cli.py  test_config.py  test_create.py  test_db.py  test_export.py  test_filters.py  test_models.py  test_pull.py  test_push.py  test_schema.py  test_sync.py
tests/web/: conftest.py  test_cli.py  test_config_core.py  test_converter.py  test_crawler.py  test_db.py  test_embeddings.py  test_filters.py  test_image_extractor.py  test_llms.py  test_models.py  test_output.py  test_pagination.py  test_processor.py  test_processor_embeddings.py  test_unwrap_tags.py
(+227 files in other folders)
